[gd_scene load_steps=8 format=2]

[ext_resource path="res://gamePlay/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/ui_controlNode_dark_theme.tres" type="Theme" id=3]
[ext_resource path="res://gamePlay/CommandProcessor.gd" type="Script" id=4]
[ext_resource path="res://userInterface/Locale.tscn" type="PackedScene" id=5]
[ext_resource path="res://gamePlay/LocaleManager.gd" type="Script" id=6]
[ext_resource path="res://gamePlay/But_MoreOptions.gd" type="Script" id=9]
[ext_resource path="res://assets/liberation_serif_30pt.tres" type="DynamicFont" id=11]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 4 )

[node name="LocaleManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Loc_Boat" parent="LocaleManager" instance=ExtResource( 5 )]
margin_left = 41.38
margin_top = -513.913
margin_right = 291.381
margin_bottom = -313.913
locale_name = "the boat"
locale_description = "You have been shipwrecked."
option1 = "Go: east off the boat"
option2 = "Examine: this boat"
option3 = "Wait: a while"

[node name="Loc_Shore" parent="LocaleManager" instance=ExtResource( 5 )]
margin_left = 509.38
margin_top = -512.913
margin_right = 759.381
margin_bottom = -312.913
locale_name = "the beach outside the wrecked ship"
locale_description = "You are standing on a white sand beach beside the crashing waves.  You can go west, back onto the boat, or go north into the woods."
option1 = "Go: west to boat"
option2 = "Go: north to woods"
option3 = "Talk: to yourself"

[node name="Loc_WoodsA1" parent="LocaleManager" instance=ExtResource( 5 )]
margin_left = 510.439
margin_top = -806.384
margin_right = 760.44
margin_bottom = -606.384
locale_name = "the island woods"
option1 = "Go: south back to the beach"
option2 = "Go: north deeper in"

[node name="Loc_WoodsA2" parent="LocaleManager" instance=ExtResource( 5 )]
margin_left = 509.439
margin_top = -1083.38
margin_right = 759.44
margin_bottom = -883.384
locale_name = "deeper into the woods"
locale_description = "The woods are very thick. You feel like someone -- or something, may be watching you."
option1 = "Go: south back in the direction of the beach"
option2 = "Go: east into the thicket"

[node name="Loc_WoodsA3" parent="LocaleManager" instance=ExtResource( 5 )]
margin_left = 882.439
margin_top = -1084.38
margin_right = 1132.44
margin_bottom = -884.38
locale_name = "a clearing"
option1 = "Go: north after the creature"
option2 = "Go: west back into the thicket"
option3 = "Listen: to the sounds"

[node name="Loc_WoodsA4" parent="LocaleManager" instance=ExtResource( 5 )]
margin_left = 878.439
margin_top = -1361.38
margin_right = 1128.44
margin_bottom = -1161.38
locale_name = "a cliff top"
option1 = "Go: south back to the clearing  "

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -274.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_left = 1.0
margin_top = 1.0
margin_right = 749.0
margin_bottom = 599.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 728.0
margin_bottom = 578.0
custom_constants/separation = 10

[node name="ItemList" type="ItemList" parent="Background/MarginContainer/Rows"]
margin_right = 708.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="But_MoreOptions" type="Button" parent="Background/MarginContainer/Rows/ItemList"]
margin_right = 170.0
margin_bottom = 36.0
text = "More Options"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://Screens/MoreOptions.tscn"

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 50.0
margin_right = 708.0
margin_bottom = 438.0
size_flags_vertical = 3

[node name="CurrentText" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo"]
margin_left = 1.0
margin_top = 1.0
margin_right = 707.0
margin_bottom = 387.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 448.0
margin_right = 708.0
margin_bottom = 568.0
rect_min_size = Vector2( 0, 120 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
margin_left = 1.0
margin_top = 1.0
margin_right = 707.0
margin_bottom = 119.0
custom_constants/separation = 5

[node name="option1" type="Button" parent="Background/MarginContainer/Rows/InputArea/VBoxContainer"]
margin_right = 706.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 11 )
text = "Option 1"
align = 0

[node name="option2" type="Button" parent="Background/MarginContainer/Rows/InputArea/VBoxContainer"]
margin_top = 41.0
margin_right = 706.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 11 )
text = "Option 2"
align = 0

[node name="option3" type="Button" parent="Background/MarginContainer/Rows/InputArea/VBoxContainer"]
margin_top = 82.0
margin_right = 706.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 11 )
text = "Option 3"
align = 0

[node name="Con_charSheet" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -294.0
margin_bottom = 406.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Con_charSheet"]
margin_left = 1.0
margin_top = 1.0
margin_right = 293.0
margin_bottom = 405.0

[node name="VBoxContainer" type="VBoxContainer" parent="Con_charSheet/MarginContainer"]
margin_right = 292.0
margin_bottom = 404.0

[node name="IL_cs_label" type="ItemList" parent="Con_charSheet/MarginContainer/VBoxContainer"]
margin_right = 292.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Con_charSheet/MarginContainer/VBoxContainer/IL_cs_label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -141.0
margin_right = 141.0
margin_bottom = 43.0
text = "Character Sheet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSheet" type="TextEdit" parent="Con_charSheet/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 292.0
margin_bottom = 404.0
size_flags_vertical = 3
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Con_chatScreen" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Con_chatScreen"]
margin_left = 1.0
margin_top = 1.0
margin_right = 291.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IL_cs_label" type="ItemList" parent="Con_chatScreen/VBoxContainer"]
margin_right = 290.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Con_chatScreen/VBoxContainer/IL_cs_label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.0
margin_right = 142.0
margin_bottom = 43.0
text = "Chat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatScreen" type="TextEdit" parent="Con_chatScreen/VBoxContainer"]
margin_top = 44.0
margin_right = 290.0
margin_bottom = 194.0
size_flags_vertical = 3
text = "Char1: What do you think?
Char2: Huh?  About what?
"
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Background/MarginContainer/Rows/ItemList/But_MoreOptions" to="Background/MarginContainer/Rows/ItemList/But_MoreOptions" method="_on_But_MoreOptions_button_up"]
[connection signal="button_down" from="Background/MarginContainer/Rows/InputArea/VBoxContainer/option1" to="." method="_on_option1_button_down"]
[connection signal="button_down" from="Background/MarginContainer/Rows/InputArea/VBoxContainer/option2" to="." method="_on_option2_button_down"]
[connection signal="button_down" from="Background/MarginContainer/Rows/InputArea/VBoxContainer/option3" to="." method="_on_option3_button_down"]
